tests/int/use_command/snapshots/integration__int__use_command__empty_and_glob__modules_empty_module_empty_r_e_grouped.snap
---
source: tests/int/use_command/empty_and_glob.rs
info:
  program: crawk
  args:
    - "-p"
    - /home/barcie/coding/crawk/modules
    - use
    - empty_module
    - "-r"
    - "-e"
    - "--grouped"
---
success: true
exit_code: 0
----- stdout -----
empty_module

----- stderr -----
