tests/int/use_command/snapshots/integration__int__use_command__empty_and_glob__modules_uses_empty_glob_glob_r_e_grouped_resolve-globs.snap
---
source: tests/int/use_command/empty_and_glob.rs
info:
  program: crawk
  args:
    - "-p"
    - /home/barcie/coding/crawk/modules
    - use
    - uses_empty_glob
    - "-r"
    - "-e"
    - "--grouped"
    - "--resolve-globs"
---
success: true
exit_code: 0
----- stdout -----
uses_empty_glob

----- stderr -----
