tests/int/use_command/snapshots/integration__int__use_command__empty_and_glob__should_preserve_glob_when_module_unresolvable.snap
---
source: tests/int/use_command/empty_and_glob.rs
info:
  program: crawk
  args:
    - "-p"
    - /home/barcie/coding/crawk/fixtures/glob_fallback
    - use
    - importer
    - "--resolve-globs"
---
success: true
exit_code: 0
----- stdout -----
crate::nonexistent_module::*

----- stderr -----
